Update on Overleaf.

--- a/acknow.tex
+++ b/acknow.tex
@@ -13,7 +13,9 @@ Development work has also been supported at Chalmers University of Technology in
 framework research program on `Photochemical smog in China' financed by
 the Swedish Research Council (639-2013-6917), and FORMAS.\\
 
-The work on condensable organics was partly funded by the Norwegian Ministry of Climate and Environment. In addition, the Nordic Council of Ministers funded an expert workshop on condensables in March 2020, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and possible approaches for dealing with this important class of compounds.\\
+The work on condensable organics was partly funded by the Norwegian Ministry of Climate and Environment. 
+
+%In addition, the Nordic Council of Ministers funded an expert workshop on condensables in March 2020, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and possible approaches for dealing with this important class of compounds.\\
 
 The work of TNO was partly funded
 by the Copernicus Atmosphere Monitoring Service (CAMS),
