--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -19,7 +19,7 @@ overview of the status of transboundary air pollution in Europe,
 tracing progress towards existing emission control Protocols and
 supporting the design of new protocols, when necessary. An additional
 purpose of these reports is to identify problem areas, new aspects
-and findings that are relevant to the Convention.
+and findings that are relevant to the Convention. This year, special attention has been given to the trends of air pollution, supporting the review of the Gothenburg Protocol.
 %The progress according to the EMEP Workplan \citep{EMEP:WP2016} is also reported here. Table \ref{Tab:WP} give an overview of which items in the workplan that the different chapters report on.
 
 
@@ -87,22 +87,22 @@ and findings that are relevant to the Convention.
 
 The present report is divided into four parts. Part I presents the status
 of transboundary air pollution with respect to acidification, eutrophication,
-ground level ozone and particulate matter in Europe in 2018.
-Part II summarizes research activities of relevance to the
-EMEP programme, while Part III deals with technical developments going on within the centres.
+ground level ozone and particulate matter in Europe in 2019.
+Part II summarizes the work on trends performed to support the review of the Gothenburg Protocol, while Part III deals with technical developments going on within the centres.
 
-Appendix~\ref{ch:appx_emis_2018} in Part IV contains information on the national total emissions of main pollutants and  primary particles for 2018, while Appendix~\ref{ch:appx_emis_trends} shows the  emission trends for the period of 2000-2018. Country-to-count\-ry source-receptor matrices with calculations of
+Appendix~\ref{ch:appx_emis_2019} in Part IV contains information on the national total emissions of main pollutants and  primary particles for 2019, while Appendix~\ref{ch:appx_emis_trends} shows the  emission trends for the period of 2000-2019. Country-to-count\-ry source-receptor matrices with calculations of
 the transboundary contributions to pollution in different countries
-for 2018 are presented in Appendix~\ref{ch:appx_sr2018}.
+for 2019 are presented in Appendix~\ref{ch:appx_sr2019}.
 
-Appendix~\ref{ch:appx_countryrep_2018} describes the country
+Appendix~\ref{ch:appx_countryrep_2019} describes the country
 reports which are  issued as a supplement to the EMEP status reports.
 
-Appendix~\ref{ch:appx_modeleval} introduces the model evaluation
-report for 2018 \citep{WEB2020:Eval} which is available online and contains time series plots
-of acidifying and eutrophying components
-\citep{WEB2020:SN}, ozone \citep{WEB2020:O3} and particulate matter \citep{WEB2020:PM}. These plots are provided for all stations reporting to
-EMEP (with just a few exclusions due to data-capture or technical problems).
+%Appendix~\ref{ch:appx_modeleval} introduces the model evaluation
+%report for 2018 \citep{WEB2020:Eval} which is available online and contains time series plots
+%of acidifying and eutrophying components
+%\citep{WEB2020:SN}, ozone \citep{WEB2020:O3} and particulate matter \citep{WEB2020:PM}. These plots are provided for %all stations reporting to
+%EMEP (with just a few exclusions due to data-capture or technical problems).
+Model evaluation against all EMEP observations are visualized online at XXXXX web address
 This online information is complemented by numerical fields and other
 information on the EMEP website. The reader is encouraged to visit the
 website, \url{http://www.emep.int}, to access this additional information.
@@ -239,11 +239,8 @@ are replaced by ozone flux estimates for crops and forests.
 
 
 
-This report includes also concentrations of particulate matter
-(PM). The basic units \linebreak throughout this report
-are \ug for PM
-concentrations and the following acronyms are used for different
-components to PM:
+Furthermore, this report includes concentrations of particulate matter (PM). The basic units \linebreak throughout this report
+are \ug for PM concentrations and the following acronyms are used for different components to PM:
 
 \begin{description}
 
@@ -271,9 +268,9 @@ be entirely in the particle phase, see Chap.~\ref{ch:Condensables}.)
 
 \item[PM$_{2.5}$] - particulate matter with aerodynamic diameter
   up to 2.5 $\mu$m. In the EMEP
-  MSC-W model PM$_{2.5}$ is calculated as PM$_{2.5}$ = SO$^{2-}_4$
-  + NO$^-_3$(fine) + NH$^+_4$ + SS(fine) + MinDust(fine)
-  + SOA(fine) + PPM$_{2.5}$ + 0.27 NO$^-_3$(coarse) + PM25water.
+  MSC-W model, PM$_{2.5}$ is calculated as PM$_{2.5}$ = SO$^{2-}_4$
+  + NO$^-_3$(fine) + NH$^+_4$ + SS$_{2.5}$ + MinDust(fine)
+  + SOA(fine) + PPM$_{2.5}$ + 0.134 NO$^-_3$(coarse) + PM25water.
   (PM25water = PM associated water).
 
 \item[PM$_{\text{coarse}}$] - coarse particulate matter with aerodynamic
@@ -286,6 +283,12 @@ be entirely in the particle phase, see Chap.~\ref{ch:Condensables}.)
   up to 10 $\mu$m. In the EMEP
    MSC-W model PM$_{10}$ is calculated as PM$_{10}$ = PM$_{2.5}$
   + PM$_{\text{coarse}}$.
+
+\item[SS$_{10}$]  - sea salt aerosol with diameter
+  up to 10 $\mu$m.
+  
+\item[SS$_{2.5}$]  - sea salt aerosol with diameter
+  up to 2.5 $\mu$m.
 
 \end{description}
 
