--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -59,7 +59,7 @@ Particularly for 2019, was the higher than average precipitation in northern Eur
 
 Precipitation for April through September in Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of the northwestern coastal regions and central-south Europe. In Latvia and Belarus, April was the driest month on record, and also European Russia was extremely dry. For spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Denmark reported wettest autumn on record and eastern Norway was extremely wet while western was very dry, and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
-\section{Measurement network 2018} 
+\section{Measurement network 2018 WENCHE/NILU TO CHANGE} 
 \label{Obs_2018}
 
 In 2018, a total of 35 Parties reported measurement data of inorganic components, particulate matter and/or ozone to EMEP from altogether 170 sites, which are the relevant components for level 1 sites \citep{MonStrat2019}. 
@@ -90,24 +90,16 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  derived from ECMWF-IFS(cy40r1) simulations (see Section~\ref{sec:meteo}). The
  land-based emissions have been derived from the 2020 official data
  submissions to UNECE CLRTAP \citep{CEIP2020}, as documented in
- Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were substituted by an emission data set provided by TNO for 2017 (the so-called \textit{Ref2} scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS71). The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. \textcolor{blue}{OLD: This run is henceforth referred to as~\textbf{EMEPwRef2C}. To study the effect of condensable organics, another model run was performed using official emission data as prepared by CEIP, without any replacement (henceforth called~\textbf{EMEP}), and the results are presented in this year's country reports \citep{Klein:2020} and discussed in Chapter~\ref{ch:Condensables}. }
+ Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called \textit{REF2.1} scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see chapter \ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
  
  Emissions from international shipping
  within the EMEP domain are derived from the CAMS global shipping
  emissions \citep{CAMSemis2019}, developed by the Finnish
  Meteorological Institute (FMI). The forest fires emissions are taken from
  The Fire INventory from NCAR (FINN) \citep{FINNIGAN1990}, version 5.
- For more details on the emissions for the 2019 model runs see Chapters
- \ref{ch:emis2019} \textcolor{blue}{OLD: and \ref{chap:TNO},} and Appendix \ref{ch:appx_emis_2019}.
+ For more details on the emissions for the 2019 model runs see Chapter
+ \ref{ch:emis2019} and Appendix \ref{ch:appx_emis_2019}.
 
- \textcolor{blue}{WE ARE NOT RUNNING 2020, are we? OLD: Preliminary simulations for 20219 have been performed with the same
- EMEP MSC-W model version rv4.35, driven by 2019 meteorological
- input (derived from ECMWF-IFS cy46r1), using 2019 forest fire emissions (FINN)
- and else the same emissions as in the 2018 run. Climatological
- means were used for boundary conditions. No evaluation of the 2019
- results have been made as EMEP observational data for 2019 are not yet
- available. The model data for 2019 can be downloaded from the EMEP
- webpage (\url{http://www.emep.int}). }
 
  %Trend runs with the EMEP MSC-W model have been performed for the
  %period of 2000--2016, using meteorological data and emissions for the
@@ -127,9 +119,9 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
 
 
 
-\section{Air pollution in 2018} 
+\section{Air pollution in 2019} 
 
-\subsection{Ozone}
+\subsection{Ozone - TO BE WRITTEN BY SVERRE}
 \label{O3MAX}
 
 The ozone observed at a surface station is the net result of various physio-chemical processes: surface dry deposition and uptake in vegetation, titration by nearby \nox emissions, regional photochemical ozone formation and atmospheric transport of background ozone levels, each of which may have seasonal and diurnal systematic variations. Episodes with elevated levels of ozone are observed during the summer half year when certain meteorological situations (dry, sunny, cyclonic stable weather) promote the formation of ozone over the European continent. 
@@ -216,27 +208,19 @@ There is good agreement between the modelled and observed
 distributions of annual mean \PM[10] and \PM[2.5], with correlation
 coefficients of 0.65 and 0.7, respectively. Overall, the model
 underestimates the observed annual mean of \PM[10] by 17\% and
-\PM[2.5] by 16\%. \textcolor{blue}{Refer to AeroVal....A comprehensive model evaluation is provided in~\cite{WEB2020:PM}.}
+\PM[2.5] by 16\%. \textcolor{blue}{CHECK with and Refer to AeroVal....A comprehensive model evaluation is provided in~\cite{WEB2020:PM}.}
 
-In terms of meteorological conditions, the year 2018 was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half of the year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation.
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citep{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
+November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
-On the annual basis, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citep{CAMS2020}, the most prominent feature
-of precipitation in 2019 was the wet end of the year in western and southern Europe. The month of
-November was particularly extreme, both in terms of the total rainfall amounts and the number of
-days with heavy rainfall.
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2019_vs_2000-2018.pdf}}
+\caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2019 from the 2000-2018 mean.}
+\label{fig:PManomin2019}
+\end{figure}
 
-
- 
-Furthermore, in Northern and Central Europe, the Baltic region and European Russia, the year 2018 was dry compared to the 2000-2017 average, especially in the spring and summer, which contributed to the photochemistry and secondary aerosol formation. On the other hand, it was a relatively wet year in Western and Southern Europe (Figure~\ref{fig:2018-avMET}) and also in parts of Central, Northern and Eastern Europe in the winter~\citep{CAMS2019}, so that the pollutants were more efficiently removed from the air in those regions.  
-
-%\begin{figure}[H]
-%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2018_vs_2000-2017.pdf}}
-%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2018_vs_2000-2017.pdf}}
-%\caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2018 from the 2000-2017 mean.}
-%\label{fig:PManomin2018}
-%\end{figure}
-
-Figure~\ref{fig:PManomin2018} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2018 relative to 2000-2017 averages simulated with a model version used for 2019 reporting and EMEP reported emissions. It shows that the PM pollution levels in 2018 were rather moderate, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average). Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. The prolonged heat wave affected Central and Northern Europe during summer 2018 and caused enhanced aerosol levels; this is discussed in Chapter \ref{ch:Summer2018}.
+Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages simulated with the same model version, used for 2019 reporting. It shows that the PM pollution in 2019 was rather moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-30\% lower compared to the 18-year average in Central Europe for \PM[10], and over an even larger area also covering most of Europe (except Northern Europe) and northern Russia for \PM[2.5]. Only along NW/N coasts in Fennoscandia and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
 
 
 \subsubsection[PM exceedances]{Exceedances of EU limit values and WHO Air Quality Guidelines in 2018}
@@ -270,10 +254,9 @@ of PM levels occurring in rural and, to some extend, in urban background
 areas.
 
 
-Model results and EMEP observational data show that the annual mean \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2018 (Figure~\ref{fig:PMin2019}). The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug
+Model results and EMEP observational data show that the annual mean \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019 (Figure~\ref{fig:PMin2019}). The model calculates annual mean \PM[10] above the WHO recommended AQG of 20 \ug
 in only small regions in the Po Valley and western Turkey. The highest
-observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were registered in Slovakia (SK0007) with 26 \ug, Greece (GR0001, but only 53\% data coverage) with 25 \ug, in Cyprus (CY0002) with 24 \ug, in Czechia (CZ0003) with 23 \ug, the Netherlands (NL0010R) with 21 \ug and Hungary (HU0002) with 20 \ug. Further, the observations and model results show that annual mean \PM[2.5] concentrations (Figure~\ref{fig:PMin2018}) in 2018 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug by annual mean \PM[2.5] at seventeen sites, with the highest values in Hungary (HU0003 with 16 \ug and HU0002 with
-15.5 \ug) and in Austria (AT0002) and Czechia (CZ0003) both with 14.5 \ug.
+observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were registered at Slovakian sites (24 \ug at SK0004 and 23 \ug SK0007) and Greek GR0001 (23 \ug, 58\% data coverage only). Further, the observations and model results show that annual mean \PM[2.5] concentrations (Figure~\ref{fig:PMin2019}) in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug by annual mean \PM[2.5] at nine sites (including GR0001 with 57\% data coverage), with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug.
 
 
 \begin{figure}[ht]
@@ -291,58 +274,63 @@ observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were r
 
 
 The maps in Figure~\ref{fig:PMexceed} show the number of days with
-exceedances of 50 \ug for \PM[10] and 25 \ug for \PM[2.5] in 2018:
+exceedances of 50 \ug for \PM[10] and 25 \ug for \PM[2.5] in 2019:
 modelled values as colour contours and observed values as triangles.
 
-Out of the 62 sites with daily or hourly \PM[10] measurements with data
-coverage above 75\%, exceedance days were observed at 36 sites. No
+Out of the 67 sites with daily or hourly \PM[10] measurements with data
+coverage above 75\%, exceedance days were observed at 31 sites. No
 violations of the \PM[10] EU limit value (more than 35 exceedance
-days) were observed. Still, 18 sites had more than 3 exceedance days
+days) were observed. Still, 12 sites had more than 3 exceedance days
 (according to WHO AQG recommendations). The highest numbers of days
-with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17
-at CZ0003.
+with observed exceedances of \PM[10] were 7 at DE0001 and 6 at LV0010 and RS0005.
 
-\PM[2.5] concentrations exceeded the WHO AQG value at 31 out of 41
-stations in 2018. Among those, at 21 sites the number of exceedance
+\PM[2.5] concentrations exceeded the WHO AQG value at 21 out of 51
+stations in 2019. Among those, at 21 sites the number of exceedance
 days were more than 3 (the recommended limit according to WHO AQG). 
-The highest number of exceedance days registered were 50, which were observed at HU0002, IT0004 and PL0009, followed by 49 and 48 exceedance days at AT0002 and HU0003, respectively.
+The highest number of exceedance days was 40, observed at HU0002 and IT0004, followed by 30, 26 and 24 exceedance days at DE0044, PL0005 and AT0002, respectively.
 
-The modelled numbers of exceedance days in 2018 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. For \PM[10], the model underestimates the frequency of exceedances of the EU limit value of 50 \ug for some central European sites, for instance at SK0007 and CZ0003 (no modelled exceedance days versus, respectively, 25 and 17 observed), PL0009 (1 exceedance day vs. 11 observed) and HU0002 (no exceedance day vs. 10 observed). On the other hand, the model tends to somewhat overestimate the number of exceedance days at some Mediterranean sites, influenced by Saharan dust, e.g. at the Cypriot site CY0002 (28 vs. 25 observed) and several Spanish sites (in particular ES0007 with 23 vs. 5 observed). Practically all the exceedances registered at the central European sites occurred during winter and autumn (and also in spring at e.g. Polish, Dutch, and Hungarian sites). By contrast, at the Mediterranean sites the exceedances were more frequent during summer.
+The modelled number of exceedance days in 2019 shows in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. For \PM[10], the model happens to underestimate the occurrence of exceedances of the EU limit value of 50 \ug for some central European sites, for instance for AT0002 and the Dutch sites NL0009 and NL0010 (no modelled exceedance days versus 5 observed), and in the Baltic for LV0010 (0 exceedance day vs. 6 observed). On the other hand, the model tends to overestimate the number of exceedance days at some Mediterranean sites, influenced by Saharan dust, e.g. at the Cypriot site CY0002 (21 vs. 4 observed) and several Spanish sites (in particular ES0007 with 21 vs. 2 observed). Most of the exceedances registered at the central European sites occurred during the winter (mainly caused by residential combustion) and in the spring (often due to agricultural emissions), while little exceedances occurred in the autumn 2019, which was rather wet. By contrast, at the Mediterranean sites the exceedances were more frequent during summer.
 
-For \PM[2.5], the model calculates 17 exceedance days versus 50 observed at PL0009, 28 versus 49 observed at AT0002, 17 versus 48 observed at HU0003. At the Dutch sites, the model slightly underestimates observed \PM[2.5] exceedance days at NL0009, but overestimates those at NL0010, NL0091 and NL0644. Also, the numbers of exceedance days are overestimated by the model at the Croatian site HR0002 (39 vs 2 observed) and at Ispra in Italy (IT0004, 64 vs 49 observed). As for \PM[10], the model calculates a larger number of exceedance days for \PM[2.5] compared with observations at CY0002 and several Spanish sites, which is related to the uncertainties in windblown dust modelling. The seasonality of \PM[2.5] exceedances is similar to that of \PM[10], with most exceedance days at the Mediterranean sites in summer and at the other sites in winter, spring and autumn. The only difference is that the largest number of \PM[2.5] exceedances at three of four German sites occurred in spring, while much fewer occurred during the cold seasons.
+For \PM[2.5], the model reproduces number of exceedance days at IT0004 (40), with most of then (61 \%) coinciding with the observed ones. However, it calculates 12 exceedance days versus 40 observed at HU0002, only 3 versus 30 observed at DE0044, and no exceedance days versus 26 observed at PL0005. At the Dutch sites, the model slightly underestimates observed \PM[2.5] exceedance days at NL0009 and NL0010, but overestimates those at NL0091 and NL0644 (same as for 2018 reported last year). Similar to \PM[10], the model calculates a larger number of exceedance days for \PM[2.5] compared with observations at CY0002 (47 vs 3 observed) and several Spanish sites, which is related to the uncertainties in windblown dust modelling. The seasonality of \PM[2.5] exceedances is similar to that of \PM[10], with most exceedance days at the Mediterranean sites in summer and at the other sites in winter, spring and autumn. The only difference is that the largest number of \PM[2.5] exceedances at three of four German sites occurred in spring, while much fewer occurred during the cold seasons.
+
+
+\textcolor{blue}{Much rain in November-December combined with the mild winter temperatures, resulted in the absence of major PM episodes in 2019 typical for Europe in winters.} 
 
 %\clearpage
+
+
+
+\subsection{Deposition of sulphur and nitrogen} %Hilde to rewrite. Anna to update figures. Done, some final checks on numbers are necessary
+\label{subs:dep}
+
+
 \begin{figure}[H]
   \centering
-%  \subfigure[oxidized S] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2018_DEP_SOX_EMEP01.pdf}}
-%  \subfigure[oxidized N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2018_DEP_OXN_EMEP01.pdf}}
-%  \subfigure[Reduced N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2018_DEP_RDN_EMEP01.pdf}} 
- \caption{Deposition of sulphur and nitrogen [mg(S)m$^{-2}$, mg(N)m$^{-2}$] in 2018.}
+  \subfigure[oxidized S] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2019_DEP_SOX_EMEP01.pdf}}
+  \subfigure[oxidized N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2019_DEP_OXN_EMEP01.pdf}}
+  \subfigure[Reduced N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/Mean_in_2019_DEP_RDN_EMEP01.pdf}} 
+ \caption{Deposition of sulphur and nitrogen [mg(S)m$^{-2}$, mg(N)m$^{-2}$] in 2019.}
 \label{deps}
 \end{figure}
-
-
-\subsection{Deposition of sulphur and nitrogen} %Hilde to rewrite. Anna to update figures
-\label{subs:dep}
 
 Modelled total depositions of sulphur and oxidised and reduced nitrogen are presented in Figure \ref{deps}.
 For sulphur, many hot spots are found in the south-eastern part of the domain. In addition, volcanic emissions of SO$_2$ lead to high depositions in and around Sicily.
 
-Oxidised nitrogen depositions are highest in northern Germany, the Netherlands, Belgium, Poland and northern Italy. These countries also have high depositions of reduced nitrogen, as do parts of the United Kingdom, France, Belgium in western Europe, and Turkey, Georgia, Armenia, Azerbaijan, Kyrgyzstan, Uzbekistan and Tajikistan in the east. 
+Oxidised nitrogen depositions are highest in northern Germany, the Netherlands, Belgium, Poland and northern Italy. These countries also have high depositions of reduced nitrogen, as do parts of the United Kingdom, France and Belgium in western Europe, and Turkey, Georgia, Armenia, Azerbaijan, Kyrgyzstan, Uzbekistan and Tajikistan in the east. 
 
-In Figure \ref{wdeps} wet depositions of nitrogen and sulphur compounds are compared to measurements at EMEP sites for 2018. Overall, the bias of the model with respect to measurements is around 
--36\% to +5\%, but higher for individual sites. A more detailed comparison between model and measurements for the year 2018 can be found in \cite{WEB2020:SN}.
+In Figure \ref{wdeps} wet depositions of nitrogen and sulphur compounds are compared to measurements at EMEP sites for 2019. Overall, the bias of the model with respect to measurements is around 
+-34\% to +19\% (XXX Check numbers when Hans have made web site), but higher for individual sites. A more detailed comparison between model and measurements for the year 2019 can be found at WEBADDRESS XXXX((((OLD:in \cite{WEB2020:SN} )).
 
 \begin{figure}[H]
   \centering
-%  \subfigure[oxidized S] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/so4wdep_2018_ModObs_EMEP01.pdf}}
-%  \subfigure[oxidized N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/no3wdep_2018_ModObs_EMEP01.pdf}}
-%   \subfigure[Reduced N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/nhxwdep_2018_ModObs_EMEP01.pdf}} 
- \caption{Modelled wet deposition of sulphur and nitrogen [mg(S)m$^{-2}$, mg(N)m$^{-2}$] in 2018, with EMEP observations on top (marked by triangles).}
+  \subfigure[oxidized S] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/so4wdep_2019_ModObs_EMEP01.pdf}}
+  \subfigure[oxidized N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/no3wdep_2019_ModObs_EMEP01.pdf}}
+   \subfigure[Reduced N] {\includegraphics*[viewport=187 62 415 750,clip,angle=90,scale=0.60]{FIGS_STATUS/nhxwdep_2019_ModObs_EMEP01.pdf}} 
+ \caption{Modelled wet deposition of sulphur and nitrogen [mg(S)m$^{-2}$, mg(N)m$^{-2}$] in 2019, with EMEP observations on top (marked by triangles).}
 \label{wdeps}
 \end{figure}
 
-\subsection{Exceedances of critical loads of acidification and eutrophication}\label{subs:exceedSnN}
+\subsection{Exceedances of critical loads of acidification and eutrophication. FROM LAST YEAR, TO BE UPDATED BY CCE/Thomas}\label{subs:exceedSnN}
 
 The exceedances of European critical loads (CLs) are computed for the total nitrogen
 (N) and sulphur (S) depositions modelled on the 0.1$\degrees \times$ 0.1$\degrees$
