--- a/report.tex
+++ b/report.tex
@@ -321,7 +321,9 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-\includeonly{chapterStatus2019}
+%\includeonly{chapterIntro,chapterStatus2019,chapterTrendsSandN}
+
+
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
 
 \begin{document}
@@ -345,12 +347,12 @@
 
 \include{chapterIntro} %For Hilde & Agnes
 
-%Now updated with the chapters that should be there 20/6-18 HF
+
 \part{Status of air pollution}
 \include{chapterStatus2019} 
-%\include{chapterEmis2019} 
+\include{chapterEmis2019} 
 
-\part{Research Activities (or should we rather call it Trends in air pollution)} 
+\part{Trends in air pollution} 
 
 \include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
 %\include{chapterTrendsOzone} %Sverre, David, Joffen
