--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -2,10 +2,10 @@
   pdfauthor = {
 % EMEP/MSC-W
 %MUST BE CHANGED
-    H. Fagerli, S. Tsyro, J.E. Jonson,
+    H. Fagerli, S. Tsyro, E. Grøtting Wærsted, 
     \'A. Ny\'{\i}ri, D. Simpson, P. Wind, 
-    A. Benedictow, H. Klein, Q. Mu
-    B. R. Denby, E. G. Wærsted
+    A. Benedictow, H. Klein, H. Brenna,
+    A. Mortier, Jan Griesfeller
 % EMEP/CCC
     W. Aas, S. Eckhardt, A.-G. Hjellbrekke, S. M. Platt, 
     S. Solberg, K. T{\o}rseth, K. E. Yttri
@@ -17,7 +17,8 @@
 % Chalmers Univ. Tech.
    R. Bergstr{\"o}m
 % TNO
-   H. A.C. Denier van der Gon, J. J.P. Kuenen, A. J.H. Visschedijk
+   J.P. Kuenen
+%   H. A.C. Denier van der Gon, J. J.P. Kuenen, A. %J.H. Visschedijk
 % EMPA: 
    S. Reimann, M. Hill
 % DWD:
@@ -53,10 +54,10 @@ Date: \today\\
 \old{TODO}
   \begin{tabular}{m{4.0cm}m{9.5cm}}
     EMEP/MSC-W: &
-    \mbox{Hilde Fagerli, Svetlana Tsyro, Jan Eiof Jonson,}
+    \mbox{Hilde Fagerli, Svetlana Tsyro, Eivind Grøtting Wærsted}
     \mbox{\'Agnes Ny\'{\i}ri, David Simpson, Peter Wind,}
-    \mbox{Anna Benedictow, Heiko Klein, Qing Mu,}
-    \mbox{Bruce Rolstad Denby, Eivind Grøtting Wærsted}\\
+    \mbox{Anna Benedictow, Heiko Klein, Hans Brenna,}
+    \mbox{Augustin Mortier, Jan Griesfeller}\\
 \\
     EMEP/CCC: &
     \mbox{Wenche Aas, Sabine Eckhardt, Anne Hjellbrekke,}
@@ -73,8 +74,8 @@ Date: \today\\
     Chalmers/SMHI: & \mbox{Robert Bergstr{\"o}m}\\
 \\    
     TNO: &
-    \mbox{Hugo A.C. Denier van der Gon, Jeroen J.P. Kuenen,}
-    \mbox{Antoon J.H. Visschedijk}\\ 
+    \mbox{Jeroen J.P. Kuenen,}
+%    \mbox{Antoon J.H. Visschedijk}\\ 
 \\
     EMPA: & \mbox{Stefan Reimann, Matthias Hill}\\
 \\
