--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -146,8 +146,8 @@ The 5 selected countries were chosen because of feedback received or discussions
 \end{figure}
 
 
-Figure~\ref{fig:CEIP3} shows the different REF2 emission estimates. The year 2010 is the original REF2 estimate, while 2015\_scaled represents the scaled REF2 to the year 2015 using the official reported data (used in the 2020 EMEP modelling). The estimate 2015\_scaled\_adjusted is the updated version described here, where for 5 selected countries the REF2 data have been revised based on new information.
-From the figure, it can be seen that the 2015 emission is lower than 2010 for almost all countries. This is partly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2 emission including condensables is corrected downward. This adjusted REF2 is, however, still considerably higher than reported emission for each of these countries.
+Figure~\ref{fig:CEIP3} shows the different REF2 emission estimates. The year 2010 is the original REF2 estimate, while 2015\_scaled represents the scaled REF2 (REF2.1) to the year 2015 using the official reported data (used in the 2020 EMEP modelling). The estimate 2015\_scaled\_adjusted is the updated version described here, where for 5 selected countries the REF2 data have been revised based on new information.
+From the figure, it can be seen that the 2015 emission is lower than 2010 for almost all countries. This is partly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2.1 emission including condensables is corrected downward. This adjusted REF2.1 is, however, still considerably higher than reported emission for each of these countries.
 
 \section{Gothenburg Protocol targets}
 \label{sec:GP}
